# xmind2testcase

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
docs/: xmind_testcase_template_v1.3.xmind
webtool/: application.py
webtool/templates/: index.html  preview.html
xmind2testcase/: __about__.py  config.py  maker_ray_excel.py  metadata.py  parser.py  testlink.py  utils.py
