[tool.poetry]
name = "xmind2testcase"
version = "0.1.0"
description = ""
authors = ["gaojiewen0484"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
XMind = "^1.2.0"
Flask = "^3.1.0"
arrow = "^1.3.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
